chore: consolidate build configuration to parent